<resources>
    <string name="app_name">TaskRoom</string>
    <string name="Projects">پروژه ها</string>
    <string name="Reminders">یادآورها</string>
    <string name="Calender">تقویم</string>
    <string name="Setting">تنظیمات</string>
    <string name="art">هنری</string>
    <string name="sports">ورزشی</string>
    <string name="tasknum">\u2022 تعداد کارها:</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="projectTitle">عنوان پروژه</string>
    <string name="insert">ثبت</string>
    <string name="taskTitle">عنوان کار</string>
    <string name="createNewProject">ایجاد پروژه جدید</string>
    <string name="subtasks">کارهای فرعی</string>
    <string name="chart">نمودار</string>
    <string name="support">پشتیبانی</string>
    <string name="aboutapp">درباره برنامه</string>
    <string name="theme">شخصی سازی</string>
    <string name="projectCategory">دسته بندی پروژه</string>
    <string name="darkmood">حالت شب</string>
    <string name="share">اشتراک</string>
    <string name="versionapp">نسخه برنامه</string>
    <string name="versionappnum">1.0.0</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reminder">یادآور</string>
    <string name="inactive">غیرفعال</string>
    <string name="active">فعال</string>
    <string name="successInsertProject">ثبت پروژه با موفقیت انجام شد.</string>
    <string name="createNewTask">ایجاد کار جدید</string>
    <string name="successInsertTask">ثبت کار با موفقیت انجام شد.</string>
    <string name="edit">ویرایش</string>
    <string name="categoryTitle">عنوان دسته بندی</string>
    <string name="successInsertCategory">ثبت دسته بندی با موفقیت انجام شد.</string>
    <string name="scientific">علمی</string>
    <string name="successUpdateProject">ویرایش پروژه با موفقیت انجام شد.</string>
    <string name="deletePrj">حذف پروژه</string>
    <string name="successDeleteProject">حذف پروژه با موفقیت انجام شد.</string>
    <string name="undo">بازگشت</string>
    <string name="deleteProject">حذف پروژه</string>
    <string name="startDate">تاریخ شروع</string>
    <string name="endDate">تاریخ پایان</string>
    <string name="repeatType">زمان تکرار</string>
    <string name="complete">تکمیل شود</string>
    <string name="completed">تکمیل شد</string>
    <string name="priority">اولویت</string>
    <string name="addComment">"توضیحات "</string>
    <string name="reminderType">نوع یادآوری</string>
    <string name="mdtp_hour_picker_description" msgid="7586639618712934060">"لغزنده دایره‌ای ساعت"</string>
    <string name="mdtp_select_hours" msgid="7651068754188418859">"انتخاب ساعت"</string>
    <string name="mdtp_minute_picker_description" msgid="6024811202872705251">"لغزنده دایره‌ای دقیقه"</string>
    <string name="mdtp_select_minutes" msgid="8327182090226828481">"انتخاب دقیقه"</string>
    <string name="mdtp_time_placeholder" translatable="false">--</string>
    <string name="mdtp_time_separator" translatable="false">:</string>
    <string name="mdtp_deleted_key" msgid="6908431551612331381">حذف شد</string>
    <string name="dueDate">موعد مقرر</string>
    <string name="mdtp_item_is_selected" msgid="2674929164900463786">انتخاب شد</string>
    <string name="mdtp_day_picker_description">Month grid of days</string>
    <string name="mdtp_select_day">Select month and day</string>
    <string name="mdtp_year_picker_description">Year list</string>
    <string name="mdtp_select_year">Select year</string>
    <string name="am_label">قبل‌ازظهر</string>
    <string name="pm_label">بعدازظهر</string>
    <string name="emptyList">هنوز چیزی ثبت نکرده اید</string>
    <string name="daily">روزانه</string>
    <string name="day">روز</string>
    <string name="weekly">هفتگی</string>
    <string name="week">هفته</string>
    <string name="monthly">ماهانه</string>
    <string name="month">ماه</string>
    <string name="yearly">سالانه</string>
    <string name="year">سال</string>
    <string name="selectDays">انتخاب روز</string>
    <string name="advance">پیشرفته</string>
    <string name="repeat">تکرار</string>
    <string name="saterday">شنبه</string>
    <string name="sunday">یکشنبه</string>
    <string name="monday">دوشنبه</string>
    <string name="tuesday">سه شنبه</string>
    <string name="wednesday">چهارشنبه</string>
    <string name="thursday">پنج شنبه</string>
    <string name="friday">جمعه</string>
    <string name="cancel">انصراف</string>
    <string name="ok">تایید</string>
    <string name="addSubtasks">ثبت کار فرعی جدید</string>
    <string name="dontRemind">یادآوری نشود.</string>
    <string name="remindInEndDate">در تاریخ پایان یادآوری شود.</string>
    <string name="remindInAdvance">در حالت پیشرفته یادآوری شود.</string>
    <string name="each">هر</string>
    <string name="inDate">"در تاریخ "</string>
    <string name="high">بالا</string>
    <string name="medium">متوسط</string>
    <string name="low">پایین</string>
    <string name="nonePriority">بدون اولویت</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="successDeleteTask">کار مورد نظر با موفقیت حذف شد.</string>
    <string name="successDeleteSubTask">کار فرعی مورد نظر با موفقیت حذف شد.</string>
    <string name="chooseadvancerepeattype">در قسمت زمان تکرار می توانید زمان های یادآوری را انتخاب نمایید.</string>
    <string name="task">کار</string>
    <string name="reminderTitle">عنوان یادآور</string>
    <string name="successInsertReminder">ثبت یادآور با موفقیت انجام شد.</string>
    <string name="successDeleteReminder">یادآور مورد نظر با موفقیت حذف گردید</string>
    <string name="reminderTime">زمان یادآور</string>
    <string name="createNewReminder">ایجاد یادآور جدید</string>
    <string name="taskList">لیست کارها</string>
    <string name="reminderList">لیست یادآورها</string>
    <string name="hello_alarm">hello_alarm</string>
    <string name="job_service_notification">job_service_notification</string>
    <string name="notification_channel_description">notification_channel_description</string>
    <string name="shortcut_disabled_message">shortcut_disabled_message</string>
</resources>