<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_projects"
        android:title="@string/Projects"
        app:showAsAction="never" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_reminder"
        android:title="@string/Reminders"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_calendar"
        android:title="@string/Calender"
        app:showAsAction="never"/>

    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/Setting"
        app:showAsAction="never"/>

</menu>