<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp">

    <RadioGroup
        android:id="@+id/repeatedTypeVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:text="@string/daily"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:text="@string/weekly" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:text="@string/monthly" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:text="@string/yearly" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:text="@string/selectDays" />
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/textColor"
            android:text="@string/advance" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>