<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:paddingStart="32dp"
    android:paddingEnd="32dp">

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/saterday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saterday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sunday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saterday" />
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/monday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunday"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/tuesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tuesday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monday"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/wednesday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wednesday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tuesday"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/thursday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thursday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wednesday"/>
    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friday"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thursday"/>
    <Button
        android:id="@+id/repeatDayBtn"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/ok"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/friday" />

</androidx.constraintlayout.widget.ConstraintLayout>