<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/projectsBox"
    android:layout_width="120dp"
    android:layout_height="wrap_content"
    android:layout_marginEnd="12dp"
    android:background="@drawable/light_gray_corner_shape"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">

    <ImageButton
        android:id="@+id/prjCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="6dp"
        android:background="@drawable/orange_circle_shape"
        android:contentDescription="@string/sports"
        android:src="@drawable/ic_white_art"
        app:layout_constraintBottom_toTopOf="@+id/projectsTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/projectsTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/art"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:ellipsize="end"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/tasknum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/prjCategory" />

    <TextView
        android:id="@+id/tasknum"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tasknum"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tasksNumVal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projectsTitle" />

    <TextView
        android:id="@+id/tasksNumVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tasknum"
        app:layout_constraintTop_toBottomOf="@+id/projectsTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>