<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/calendarLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.applandeo.materialcalendarview.CalendarView
            android:id="@+id/englishCalendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/disableBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/disable_grey"
                android:clickable="false"
                android:visibility="invisible" />
        </com.applandeo.materialcalendarview.CalendarView>
    </LinearLayout>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_bg_corner_shape"
        android:padding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calendarLinearLayout">

        <LinearLayout
            android:id="@+id/btnLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/taskList"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:gravity="center"
                android:tag="clicked"
                android:text="@string/taskList"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/reminderList"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:background="@drawable/unselected_left_corner_button_theme_english"
                android:gravity="center"
                android:tag="unclicked"
                android:text="@string/reminderList" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:paddingTop="16dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnLinear" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/fab2"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="bottom|end"
            android:background="@drawable/ic_fill_orange_circle_shape"
            app:srcCompat="@drawable/ic_white_add_task" />

        <TextView
            android:id="@+id/taskText"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_3sdp"
            android:background="@drawable/white_corner_shape"
            android:gravity="center"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:text="@string/task"
            android:textColor="@color/black"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fab1"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="bottom|end"
            android:background="@drawable/ic_fill_orange_circle_shape"
            app:srcCompat="@drawable/ic_white_add_alarm" />

        <TextView
            android:id="@+id/reminderText"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_3sdp"
            android:background="@drawable/white_corner_shape"
            android:gravity="center"
            android:paddingStart="@dimen/_5sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:text="@string/reminder"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:visibility="gone" />

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addTaskBtn"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_add" />

</androidx.constraintlayout.widget.ConstraintLayout>